Fixed S2 code bug

--- a/Editorials/CCC2015.tex
+++ b/Editorials/CCC2015.tex
@@ -89,7 +89,8 @@
 	\subsection {Explanation}
 	This problem consists of efficiently storing the information and ensuring that we can make as many customers satisfied. We begin by declaring an array that will store for every (i+1)th jersey its appropriate size. Let's denote 1 for small, 2 for medium, and 3 for large. In the integer array, the (i)th element will represent the (i+1)th jersey size as an integer. We then go through our requests sequentially, and see if it is possible. We can choose to use a boolean array to see if the jersey was already taken, or we can choose to plurge the other array. We increment our sum variable which is our answer for every possible match. At the end, we simply output our sum variable.
 	
-	\subsection {LOL code}
+	\subsection {Java Code}
+	\begin{lstlisting}
 	/* Horatiu Lazu */
 
 	import java.io.*;
@@ -150,9 +151,6 @@
 			}
 		}
 	}
-	\subsection{Subsection} %subsubsection
-	This is a subsection!
-	
-	\paragraph{LOL}
-	Hi world. Some paragraphs
+	\end{lstlisting}
+	\newpage
 \end{document}
