Added more to S3 2015 editorial

--- a/Editorials/CCC2015.tex
+++ b/Editorials/CCC2015.tex
@@ -186,7 +186,7 @@
 	\end{lstlisting}
 	
 	\subsubsection{Solution B: Binary Trees/Disjoint Sets}
-	Another way of approaching this problem is using Binary Trees/Disjoint Sets.
+	Another way of approaching this problem is using Binary Trees/Disjoint Sets. The concept of binary trees is to create a set for every range that is not blocked by an already visited gate. Since finding the head (highest possible gate) takes logarithmic time, then we can reduce the time complexity required to assign the planes
 	
 	\subsubsection {Java Code}
 	\begin{lstlisting}
